# TinyRecursiveModels

./: README.md
docs/: chess.html  index.html  visualize.html
docs/js/: maze.js  pattern.js  sudoku.js  trm-chess.js  trm-real.js  trm.js
docs/wasm/: package.json  wasm_trm.d.ts  wasm_trm.js  wasm_trm_bg.wasm  wasm_trm_bg.wasm.d.ts
wasm-trm/: Cargo.toml
wasm-trm/src/: layers.rs  lib.rs  model.rs  tensor.rs
