[package]
name = "wasm-trm"
version = "0.1.0"
edition = "2021"
authors = ["TRM Demo"]
description = "Tiny Recursive Model - WASM implementation"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
rand = "0.8"
getrandom = { version = "0.2", features = ["js"] }

[dependencies.web-sys]
version = "0.3"
features = [
    "console",
    "Window",
    "Performance",
]

[profile.release]
opt-level = "s"
lto = true
